Started bio section
Started implementing bio section with some little styling

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,13 @@ body {
 
   }
 
+  .card-img-top{
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+  }
+
+  
   #musicSection, #aboutSection{
     background-color: rgb(139, 63, 35) !important;
   }
