--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ body {
   }
   main{
     flex:1; /* Pushes footer to the bottom when there is not enough content*/
-    background-color: #7e7575;
+    background-color: #100f0f;
 
   }
 
