--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,16 @@ body {
     word-wrap: break-word; /* Ensures text wraps properly */
 }
 
+
+.bandMember{
+    border: 10px solid transparent;
+    margin-bottom: 25px;
+    width: 100%;
+    max-height: 70%;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
   #musicSection, #aboutSection{
     background-color: rgb(67, 67, 76) !important;
     text-align: center;
