--- a/css/styles.css
+++ b/css/styles.css
@@ -145,6 +145,15 @@ body {
       border-radius: 50%;
     }
 
+    .bandMember{
+      border: 10px solid transparent;
+      margin-bottom: 25px;
+      width: 70%;
+      max-height: 70%;
+      border-radius: 50%;
+      object-fit: cover;
+  }
+
     .card-title, .card-text {
         font-size: 0.8rem; /* Reduce text size in cards */
     }
