--- a/css/styles.css
+++ b/css/styles.css
@@ -122,7 +122,7 @@ body {
     }
 
     /* Styling for card images*/
-  .card-img-top{
+  .bandMember{
     max-width: 100%;
     max-height: auto;
     border-radius: 50%;
