--- a/css/styles.css
+++ b/css/styles.css
@@ -77,7 +77,9 @@ body {
     max-height: 70%;
     border-radius: 50%;
     object-fit: cover;
+  
 }
+
 
   #musicSection, #aboutSection{
     background-color: rgb(67, 67, 76) !important;
@@ -126,6 +128,7 @@ body {
     max-width: 100%;
     max-height: auto;
     border-radius: 50%;
+    object-fit: cover;
   }
 
   }
