--- a/css/styles.css
+++ b/css/styles.css
@@ -58,9 +58,12 @@ body {
 
   /* Styling for card images*/
   .card-img-top{
-    max-width: 100%;
-    max-height: 65%;
+    border: 10px solid transparent;
+    margin-bottom: 25px;
+    width: 100%;
+    max-height: 70%;
     border-radius: 50%;
+    object-fit: cover;
   }
 
   .card-text{
