--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,12 @@ body {
   header {
     /*position: sticky;*/
     top: 0;
-    z-index: 1000;
+    z-index: 100;
+
+  }
+
+  .logoHeader{
+    margin-top:17px
   }
 
   main{
