--- a/css/styles.css
+++ b/css/styles.css
@@ -28,20 +28,6 @@ a:hover {
   border-bottom: 1px solid blue;
 }
 
-/*#hero img{
-  width: 500px;
-  max-height: 400px;
-  object-fit: cover;
-  
-
-} */
-/*#hero img {
-  width: 100%;
-  max-height: 400px; /* Adjust as necessary */
- /* object-fit: cover;
-}*/
-
-
 .logoHeader{
   height: auto;
   object-fit: cover;
@@ -77,20 +63,14 @@ body {
   }
 
   /* Styling for card images*/
-  .card-img-top{
+ /* .card-img-top{
     border: 10px solid transparent;
     margin-bottom: 25px;
     width: 100%;
     max-height: 70%;
     border-radius: 50%;
     object-fit: cover;
-  }
-
-  .card-text{
-    font-size: 0.9rem; /* Adjust size for smaller screens */
-    text-align: center;
-    word-wrap: break-word; /* Ensures text wraps properly */
-}
+  }*/
 
 
 .bandMember{
