--- a/css/styles.css
+++ b/css/styles.css
@@ -56,21 +56,36 @@ body {
   .logoHeader{
     margin-top:40px;
   }
+
   main{
     flex:1; /* Pushes footer to the bottom when there is not enough content*/
     background-color: #100f0f;
 
   }
 
-  /* Styling for card images*/
- /* .card-img-top{
-    border: 10px solid transparent;
-    margin-bottom: 25px;
-    width: 100%;
-    max-height: 70%;
-    border-radius: 50%;
-    object-fit: cover;
-  }*/
+  .gig-section{
+    min-height: 400px;
+   /* border: solid 1px white;*/
+    margin-left: 60px;
+    text-align: center;
+  }
+
+  .gigs-container .row > div {
+    min-height: 150px; /* Reserve space for each column */
+   /*border: solid 1px white;*/
+    margin-left: 50px;
+    padding-top:5px;
+
+}
+
+.gigs-contact{
+  border: 1px solid white;
+  margin-top: 5px;
+}
+
+.contact-btn{
+  margin-top:5%;
+}
 
 
 .bandMember{
@@ -136,6 +151,13 @@ body {
     object-fit: cover;
   }
 
+  .gig-section{
+    min-height: 400px;
+    /*border: solid 1px blue;*/
+    margin-left: 20%;
+    text-align: center;
+  }
+
   }
 
   @media (max-width: 576px) {
@@ -146,12 +168,6 @@ body {
     #hero img {
         max-height: 300px; /* Reduce hero image height */
     }
-
-  /*  .card-img-top{
-      max-width: 70%;
-      max-height: auto;
-      border-radius: 50%;
-    }*/
 
     .bandMember{
       border: 10px solid transparent;
