--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,11 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 html,body{
     height: 100%; /* Ensure the body fills the viewport */
-    margin: 0; /* Remove default margin */
 }
 
 .nav{
@@ -66,14 +71,13 @@ body {
   .gig-section{
     min-height: 400px;
    /* border: solid 1px white;*/
-    margin-left: 60px;
+   
     text-align: center;
   }
 
   .gigs-container .row > div {
     min-height: 150px; /* Reserve space for each column */
    /*border: solid 1px white;*/
-    margin-left: 50px;
     padding-top:5px;
 
 }
@@ -151,12 +155,7 @@ body {
     object-fit: cover;
   }
 
-  .gig-section{
-    min-height: 400px;
-    /*border: solid 1px blue;*/
-    margin-left: 20%;
-    text-align: center;
-  }
+ 
 
   }
 
