--- a/css/styles.css
+++ b/css/styles.css
@@ -82,7 +82,7 @@ body {
 }
 
 .gigs-contact{
-  border: 1px solid white;
+ /* border: 1px solid white;*/
   margin-top: 5px;
 }
 
@@ -90,15 +90,37 @@ body {
   margin-top:5%;
 }
 
+#aboutSection {
+  min-height: 300px; /* Reserve sufficient height */
+}
+
+.bandMember-profile{
+  border: 10px solid transparent;
+  margin-bottom: 25px;
+  width: 75%;
+  height: 75%;
+  border-radius: 50%;
+  object-fit: cover;
+  padding: 0;
+}
 
 .bandMember{
     border: 10px solid transparent;
     margin-bottom: 25px;
-    width: 100%;
-    max-height: 70%;
+    width: 75%;
+    height: 75%;
     border-radius: 50%;
     object-fit: cover;
+    padding: 0;
   
+}
+
+.bandMember-item{
+  border: 1px solid white;
+  padding: 0;
+  margin: 0;
+  height:auto;
+
 }
 
 
@@ -152,6 +174,7 @@ body {
     max-height: auto;
     border-radius: 50%;
     object-fit: cover;
+  
   }
 
  
@@ -166,15 +189,7 @@ body {
     #hero img {
         max-height: 300px; /* Reduce hero image height */
     }
-
-    .bandMember{
-      border: 10px solid transparent;
-      margin-bottom: 25px;
-      width: 70%;
-      max-height: auto;
-      border-radius: 50%;
-      object-fit: cover;
-  }
+  
 
     .card-title, .card-text {
         font-size: 0.8rem; /* Reduce text size in cards */
