--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+ 
 }
 
 html,body{
@@ -70,14 +70,15 @@ body {
   .gig-section{
     min-height: 400px;
    /* border: solid 1px white;*/
-   
     text-align: center;
+    border: 2px solid blue
   }
 
   .gigs-container .row > div {
     min-height: 150px; /* Reserve space for each column */
    /*border: solid 1px white;*/
     padding-top:5px;
+    border: 2px solid blue
 
 }
 
@@ -92,16 +93,7 @@ body {
 
 #aboutSection {
   min-height: 300px; /* Reserve sufficient height */
-}
-
-.bandMember-profile{
-  border: 10px solid transparent;
-  margin-bottom: 25px;
-  width: 75%;
-  height: 75%;
-  border-radius: 50%;
-  object-fit: cover;
-  padding: 0;
+  border: 2px solid purple
 }
 
 .bandMember{
@@ -123,6 +115,9 @@ body {
 
 }
 
+#musicSection{
+  border: 2px solid green;
+}
 
   #musicSection, #aboutSection{
     background-color: rgb(67, 67, 76) !important;
@@ -145,6 +140,11 @@ body {
     height: 100%;
 }
 
+
+.contactSection{
+  margin-top: 20px;
+  border: 2px solid pink;
+}
 
   footer {
     position: sticky;
