--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,7 @@ body {
   }
 
   #musicSection{
-    border: 2px solid green;
+    /*border: 2px solid green;*/
   }
 
   main{
@@ -76,14 +76,14 @@ body {
     min-height: 400px;
    /* border: solid 1px white;*/
     text-align: center;
-    border: 2px solid blue
+    /*border: 2px solid blue*/
   }
 
   .gigs-container .row > div {
     min-height: 150px; /* Reserve space for each column */
    /*border: solid 1px white;*/
     padding-top:5px;
-    border: 2px solid blue
+    /*border: 2px solid blue*/
 
 }
 
@@ -114,7 +114,7 @@ body {
 
 #aboutSection {
   min-height: 350px; /* Reserve sufficient height */
-  border: 2px solid purple
+ /* border: 2px solid purple*/
 }
 
 
