--- a/css/styles.css
+++ b/css/styles.css
@@ -66,12 +66,19 @@ body {
     z-index: 1000;
   }
 
+  a{
+    text-decoration: none;
+  }
+
   .logoHeader{
     margin-top:40px;
   }
 
 /*Gigs section*/
 .gig-section{
+  display: flex;
+  justify-content: center;
+  align-items: center;
   min-height: 400px;
   text-align: center;
   position: relative;
@@ -84,8 +91,6 @@ body {
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 20px;
   padding: 20px;
-  
-
 }
 
 .gigs-container .row > div {
@@ -300,11 +305,12 @@ body {
 .full-bio{
   max-height: 0;
   overflow: hidden;
-  transition: max-height 0.1s ease;
+  transition: max-height 0.1s ease-in-out;
   word-wrap: break-word;
   /*display: none;*/
   
   }
+  
 
 .contactSection{
   margin-top: 20px;
@@ -313,18 +319,17 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
- 
-  
 }
 
 #contact-form{
   width: 90%;
-  padding:10%;
-  ;
-  
+  padding:10%;  
 }
 
-
+#footerImage{
+max-height: 30%;
+opacity: 75%;
+}
 
   footer {
     position: sticky;
@@ -361,10 +366,6 @@ body {
   .bandMember-item {
     margin-bottom: 30px; /* Increase spacing for smaller screens */
 }
-
- 
-
- 
 
   }
 
